--- a/index.html
+++ b/index.html
@@ -91,14 +91,15 @@
               <div class="flex-grow-1">
                 <h3 class="mb-0">Website developer</h3>
                 <div class="subheading mb-3"><a href="https://kozhevnikovamn.ru">kozhevnikovamn.ru</a></div>
-                  <p>Website configuration and administration.</p>
-                </div>
+                <p>Website configuration and administration.</p>
+              </div>
               <div class="flex-shrink-0"><span class="text-primary">October 30rd, 2020 - Present time</span></div>
             </div>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="flex-grow-1">
                 <h3 class="mb-0">Intern</h3>
-                <div class="subheading mb-3">MBOU School No.75</div>
+                <div class="subheading mb-3">MUNICIPAL BUDGET EDUCATIONAL INSTITUTION SECONDARY SCHOOL NO. 75</div>
+                <p>My internship included the maintenance of computers and laptops of the school.</p>
                 <div class="flex-shrink-0"><span class="text-primary">October 2nd - November 11, 2020</span></div>
               </div>
             </div>
@@ -113,6 +114,7 @@
               <div class="flex-grow-1">
                 <h3 class="mb-0">Intern</h3>
                 <div class="subheading mb-3">MBOU School No.75</div>
+                <p>My internship included the maintenance of computers and laptops of the school.</p>
                 <div class="flex-shrink-0"><span class="text-primary">January 11th - June 10th, 2022</span></div>
               </div>
             </div>
