--- a/ru/ufane_yuki/rules.html
+++ b/ru/ufane_yuki/rules.html
@@ -10,7 +10,7 @@
     <script src="main.js"></script>
 </head>
 <body>
-    <h1 centered>Правила личных сообщений в группе Уфане Юкитеру</h1>
+    <h1 class="centered">Правила личных сообщений в группе Уфане Юкитеру</h1>
     <p>Доброго времени суток! Вы попали сюда по ссылке, которая была указана в личных сообщениях. Вот правила:</p>
     <br>
     <p class="green">Можно:</p>
@@ -27,7 +27,7 @@
         <li>Оскорблять кого-либо.</li>
     </ul>
     <br>
-    <p centered>Specional колонка для ненормальных людей из RusUTAU</p> <!-- Ибо нефиг -->
+    <p class="centered">Specional колонка для RusUTAU</p> <!-- Ибо нефиг -->
     <p class="MessageToRusUTAU">*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch), ты всегда останешься в моих глазах сволочью!</p>
     <p class="MessageToRusUTAU">Забыл сказать, я никоим образом не знаком с Imocreator.</p>
     <p class="MessageToRusUTAU">BashUTAU является фендомом для Уфимцев и Башкирцев! И вас это е*ать не должно!</p>
