--- a/ru/ufane_yuki/rules.html
+++ b/ru/ufane_yuki/rules.html
@@ -28,10 +28,12 @@
     </ul>
     <br>
     <p class="centered">Specional колонка для RusUTAU</p> <!-- Ибо нефиг -->
-    <p class="MessageToRusUTAU">*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch), ты всегда останешься в моих глазах сволочью!</p>
-    <p class="MessageToRusUTAU">Забыл сказать, я никоим образом не знаком с Imocreator.</p>
-    <p class="MessageToRusUTAU">BashUTAU является фендомом для Уфимцев и Башкирцев! И вас это е*ать не должно!</p>
-    <p class="MessageToRusUTAU">С каждым страйком в мою сторону от Немезиды, я буду кидать жалобы на группу!</p>
+    <div id="MessageToRusUTAU">
+    <p>*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch), ты всегда останешься в моих глазах сволочью!</p>
+    <p>Забыл сказать, я никоим образом не знаком с Imocreator.</p>
+    <p>BashUTAU является фендомом для Уфимцев и Башкирцев! И вас это е*ать не должно!</p>
+    <p>С каждым страйком в мою сторону от Немезиды, я буду кидать жалобы на группу!</p>
+    </div>
     <br>
     <p class="rules"><i>Правила опубликованы: 26.06.2018, Вступили в силу: 26.06.2018</i></p>
     <p class="HostedOnGitHub">Хостинг предоставлен GitHub Pages</p>
