--- a/ru/ufane_yuki/rules.html
+++ b/ru/ufane_yuki/rules.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet"> -->
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
 </head>
 <body>
     <h1 class="centered">Правила личных сообщений в группе Уфане Юкитеру</h1>
@@ -15,21 +15,22 @@
     <br>
     <p class="green">Можно:</p>
     <ul>
-        <li>Багрепортить голосовой пакет</li>
-        <li>Предлагать улучшения</li>
+        <li><p>Багрепортить голосовой пакет</p></li>
+        <li><p>Предлагать улучшения</p></li>
     </ul>
     <br>
     <p class="prohibited">Нельзя:</p>
     <ul>
-        <li>Писать не по теме.</li>
-        <li>Оскорблять голосового провайдера и виртуального вокалиста.</li>
-        <li>Пытаться подшутить над голосовым провайдером, под предлогом "давай нарисую тебе арт"*</li>
-        <li>Оскорблять кого-либо.</li>
+        <li><p>Писать не по теме.</p></li>
+        <li><p>Оскорблять голосового провайдера и виртуального вокалиста.</p></li>
+        <li><p>Пытаться подшутить над голосовым провайдером, под предлогом "давай нарисую тебе арт"<b>*</b></p></li>
+        <li><p>Оскорблять кого-либо.</p></li>
+        <li><p>Спрашивать, есть ли у UTAU дизайн.</p></li>
     </ul>
     <br>
     <p class="centered">Specional колонка для RusUTAU</p> <!-- Ибо нефиг -->
     <div id="MessageToRusUTAU">
-    <p>*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch), ты всегда останешься в моих глазах сволочью!</p>
+    <p>*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch)!</p>
     <p>Забыл сказать, я никоим образом не знаком с Imocreator.</p>
     <p>BashUTAU является фендомом для Уфимцев и Башкирцев! И вас это е*ать не должно!</p>
     <p>С каждым страйком в мою сторону от Немезиды, я буду кидать жалобы на группу!</p>
