--- a/rules.html
+++ b/rules.html
@@ -20,8 +20,8 @@
         <p class="ban_notification">За не выполнение правил, Вам будет ограничено личные сообщения со мной!</p>
     </div>
     <div id="dethrilling">
-        <p>Вот <a href="https://kagaminep.github.io/images/ddnocebo.png/">такого</a> я не потерплю! Это у <a href="https://vk.com/gaiijo">тебя</a>, дорогая моя кактус в одном месте! И да, я не пёс и не п****ас!</p>
-        <p><a href="https://kagaminep.github.io/images/ddnocebo_lc1.png">Такие</a> сообщения, я вообще терпеть не могу!</p>
+        <p>Вот <a href="images/ddnocebo.png/">такого</a> я не потерплю! Это у <a href="https://vk.com/gaiijo">тебя</a>, дорогая моя кактус в одном месте! И да, я не пёс и не п****ас!</p>
+        <p><a href="images/ddnocebo_lc1.png">Такие</a> сообщения, я вообще терпеть не могу!</p>
     </div>
 </body>
 </html>
