--- a/ru/ufane_yuki/index.html
+++ b/ru/ufane_yuki/index.html
@@ -1,1 +1,30 @@
 <!DOCTYPE HTML>
+<html lang="ru">
+  <head>
+    <title>Юкитеру Уфане | KagamineP</title>
+    <meta http-equiv="Content-Type" content="text/html" />
+    <meta charset="utf-8">
+    <meta name="description" content="Ufane Yukiteru official page" />
+    <meta name="author" content="KagamineP" />
+    <meta name="copyright" content="KagamiProject" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Юкитеру Уфане</h1>
+    </header>
+    <nav><a href="character.html">Персонаж</a></nav>
+    <nav><a href="voicebank.html">Голосовой пакет</a></nav>
+    <p class="character-vocal>CV: KagamineP</p>
+                             <div class="color_block">
+                             <em class="bt"><b>&nbsp;</b></em>
+                             <div class="block_content">
+                                                       <h3>* - Overview</h3>
+                                                        <p>Audio library "Ufane Yukiteru" was based on the source produced for the singing synthesis tool "UTAU" --> "UTAU" official site http://utau-synth.com/</p>
+                                                        <h3>Disclaimer</h3>
+                                                        <p>We don't assume any responsibility for damages caused by using Ufane Yukiteru library.</p>
+                                </div>
+                                </div>
+     </body>
+     </html>
