--- a/ufane_yuki/ru/index.html
+++ b/ufane_yuki/ru/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="ru">
 <head>
-  <title>Юкитеру Уфане</title>
+  <title>Юкитеру Уфане | KagamineP</title>
   <meta http-equiv="content-type" content="text/html" />
   <meta charset="utf-8" />
   <meta name="description" content="Официальный сайт Уфане Юкитеру" />
@@ -17,4 +17,12 @@
   <nav><a href="character.html">Персонаж</a></nav>
   <nav><a href="voicebank.html">Голосовой пакет</a></nav>
   <p>CV: KagamineP</p>
-  <div 
+  <div id="index"
+  		<h3>* - Overview</h3>
+  		<p>Audio library "Ufane Yukiteru" was based on the source produced for the singing synthesis tool "UTAU" --> "UTAU" official site http://utau-synth.com/</p>
+  		<h3>Disclaimer</h3>
+  		<p>We don't assume any responsibility for damages caused by using Ufane Yukiteru library.</p>
+  	</div>
+  </div>
+</body>
+</html>
