--- a/ufane_yuki/ru/character.html
+++ b/ufane_yuki/ru/character.html
@@ -4,7 +4,7 @@
 	<title>Юкитеру Уфане | KagamineP</title>
 	<meta http-equiv="content-type" content="text/html" />
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="character.css" />
+	<link rel="stylesheet" type="text/css" href="css/character.css" />
 </head>
 <body>
 	<header>Персонаж</header>
