--- a/rules.html
+++ b/rules.html
@@ -23,7 +23,7 @@
         <p>Вот <a href="images/ddnocebo.png/">такого</a> я не потерплю! Это у <a href="https://vk.com/gaiijo">тебя</a>, дорогая моя кактус в одном месте! И да, я не пёс и не п****ас!</p>
         <p><a href="images/ddnocebo_lc1.png">Такие</a> сообщения, я вообще терпеть не могу!</p>
         <p>Господи! Не ужели это Маргарита Баум?</p>
-        <iframe src="//vk.com/video_ext.php?oid=-23742946&id=456242969&hash=ad28de8fcf148d37&hd=1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
+        <iframe src="//vk.com/video_ext.php?oid=-23742946&id=456242969&hash=ad28de8fcf148d37&hd=1" width="640" height="360" frameborder="0" deniedfullscreen></iframe>
     </div>
 </body>
 </html>
