--- a/ufane_yukiteru/index.html
+++ b/ufane_yukiteru/index.html
@@ -7,8 +7,8 @@
 <head>
 	<title data-translate="_title">Ufane Yukiteru | KagamineP</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<script src="js/jQuery.js"></script>
-	<script src="js/ufane_yukiteru_index-i18n.js"></script>
+	<script src="JS/jQuery.js"></script>
+	<script src="JS/ufane_yukiteru_index-i18n.js"></script>
 </head>
 <body>
 	<header>
