--- a/ufane_yuki/index.html
+++ b/ufane_yuki/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="refresh" content="1;URL:https://kagaminep.ru/ufane-makoto" />
+<meta http-equiv="refresh" content="0;URL=https://kagaminep.ru/ufane-makoto" />
 </head>
 <body>
 </body>
