Messing with files
The "old" folder was created and the old files were moved there. Instead, there will be a portfolio.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,193 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <title>Hello, World!</title>
-        
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1>Hello, GitHub!</h1>
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="KagamineP" />
+
+    <title>KagamineP</title>
+    <!-- <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" /> -->
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/d8eea0f19d.js" crossorigin="anonymous"></script>
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- Core CSS -->
+    <link rel="stylesheet" href="css/styles.css" type="text/css" />
+  </head>
+  <body id="page-top">
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">
+        <span class="d-block d-lg-none">Dmitry Kiryanov</span>
+        <span class="d-home d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profileMakoto.jpg" alt="" /></span>
+      </a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+          <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Page content -->
+    <div class="container-fluid p-0">
+      <!-- About -->
+      <section class="resume-section" id="about">
+        <div class="resume-section-content">
+          <h1 class="mb-0">
+            Dmitry
+            <span class="text-primary">Kiryanov</span>
+          </h1>
+          <div class="subheading mb-5">
+            <a href="mailto:kagaminep@kagaminep.ru">kagaminep@kagaminep.ru</a>
+          </div>
+          <p></p>
+          <div class="social-icons">
+            <a class="social-icon" href="https://github.com/KagamineP"><i class="fab fa-github"></i></a>
+            <a class="social-icon" href="https://twitter.com/KagamineP_"><i class="fab fa-twitter"></i></a>
+            <button type="button" class="social-icon" data-toggle="modal" data-target="#vkLink">
+              <i class="fab fa-vk"></i>
+            </button>
+            <button type="button" class="social-icon" data-toggle="modal" data-target="#discordLink">
+              <i class="fab fa-discord"></i>
+            </button>
+          </div>
+        </section>
+        <hr class="m-0" />
+
+        <!-- Experience -->
+        <section class="resume-section" id="experience">
+          <div class="resume-section-content">
+            <h2 class="mb-5">Experience</h2>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Ufane Makoto voice provider</h3>
+                <div class="subheading mb-3">Team KagamineP</div>
+                <p>I am the author and voice provider for this virtual vocalist. I update its voice packages from time to time, and add new languages.</p>
+              </div>
+              <div class="flex-shrink-0"><span class="text-primary">March 2016 - Present</span>
+            </div>
+        </section>
+        <hr class="m-0" />
+
+        <!-- Education -->
+        <section class="resume-section" id="education">
+          <div class="resume-section-content">
+            <h2 class="mb-5">Education</h2>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Municipal Budget Educational Institution Secondary School No. 118</h3>
+                <div class="subheading mb-3">Primary school</div>
+                <div>1st grade</div>
+              </div>
+              <div class="flex-shrink-0"><span class="text-primary">September 2010 - January 2011</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Municipal Budget Educational Institution Secondary School No. 118</h3>
+                <div class="subheading mb-3">Primary school</div>
+                <div>1st grade</div>
+              </div>
+              <div class="flex-shrink-0"><span class="text-primary">January 2011 - May 2011</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Municipal Budget Educational Institution Secondary School No. 75</h3>
+                <div class="subheading mb-3">Secondary education</div>
+                <div>From 2nd to 9th grades</div>
+              </div>
+              <div class="flex-shrink-0"><span class="text-primary">September 2011 - May 2019</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Bashkir College of Welding and Installation and Industrial Production</h3>
+                <div class="subheading mb-3">Secondary vocational education</div>
+                <div>Master of digital information processing (computer master)</div>
+              </div>
+              <div class="flex-shrink=0"><span class="text-primary">September 2019 - Present (2022)</span></div>
+            </div>
+          </div>
+        </section>
+        <hr class="m-0" />
+
+        <!-- Skills -->
+        <section class="resume-section" id="skills">
+          <div class="resume-section-content">
+            <h2 class="mb-5">Skills</h2>
+            <div class="subheading mb-3">Programming Languages & Tools</div>
+            <ul class="list-inline dev-icons">
+              <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+              <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
+              <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+            </ul>
+          </div>
+        </section>
+        <hr class="m-0" />
+
+        <!-- Interests -->
+        <section class="resume-section" id="interests">
+          <div class="resume-section-content">
+            <h2 class="mb-5">Interests</h2>
+            <p>Besides being a developer and voice provider, I like to spend most of my time outdoors. In winter, I go skiing. During the summer heat in Ufa, I enjoy cycling.</p>
+            <p class="mb-0">When I have to stay at home, I play rhythm games and sometimes watch anime. I am a novice voice actor and in my spare time I learn to voice, as well as learn new web technologies.</p>
+          </div>
+        </section>
+      </div>
+      <!-- Bootstrap JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+      <!-- Third party JS -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+      <!-- Core theme JS-->
+      <script src="js/scripts.js"></script>
+
+      <!-- Modal windows -->
+      <!-- Discord -->
+      <div class="modal fade" id="discordLink" tabindex="-1" role="dialog" aria-labelledby="linkToDiscordProfile" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="linkToDiscordProfile">My DiscordTag</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              My DiscordTag is KagamineP#0747. Feel free to text me, but don't spam me or invite to some servers.
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- VK -->
+      <div class="modal fade" id="vkLink" tabindex="-1" role="dialog" aria-labelledby="linkToVKProfile" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="linkToVKProfile">My VK</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Here's the link to my VK profile: <a href="https://vk.com/kagaminep">https://vk.com/kagaminep</a>.
+              <i class="fab fa-warning"></i>Warning!
+              I will not add anyone, so please, don't spam me with "Add to friends".
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+  </body>
 </html>
