--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/d8eea0f19d.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" /> -->
+    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p:wght@100;300;400;500;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" /> -->
     <!-- Core CSS -->
     <link rel="stylesheet" href="css/styles.css" type="text/css" />
   </head>
@@ -57,6 +59,8 @@
             <button type="button" class="social-icon" data-toggle="modal" data-target="#discordLink">
               <i class="fab fa-discord"></i>
             </button>
+            <a class="social-icon" href="https://www.youtube.com/channel/UC2fpVDIjQZtb38sIzYBEmYA"><i class="fab fa-youtube"></i></a>
+            <a class="social-icon" href="https://patreon.com/KagamineP"><i class="fab fa-patreon"></i></a>
           </div>
         </section>
         <hr class="m-0" />
@@ -159,7 +163,7 @@
               </button>
             </div>
             <div class="modal-body">
-              My DiscordTag is KagamineP#0747. Feel free to text me, but don't spam me or invite to some servers.
+              <p>My DiscordTag is <span class="discordLink">KagamineP#0747</span>. Feel free to text me, but don't spam me or invite to some servers.</p>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -180,7 +184,7 @@
             </div>
             <div class="modal-body">
               Here's the link to my VK profile: <a href="https://vk.com/kagaminep">https://vk.com/kagaminep</a>.
-              <i class="fab fa-warning"></i>Warning!
+              Warning!
               I will not add anyone, so please, don't spam me with "Add to friends".
             </div>
             <div class="modal-footer">
