--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <h2 class="mb-5">Experience</h2>
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
               <div class="flex-grow-1">
-                <h3 class="mb-0">Ufane Makoto voice provider</h3>
+                <h3 class="mb-0">Akiba Daichi voice provider</h3>
                 <div class="subheading mb-3">Team KagamineP</div>
                 <p>I am the author and voice provider for this virtual vocalist. I update its voice packages from time to time, and add new languages.</p>
               </div>
