--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             </button>
             <a class="social-icon" href="https://www.youtube.com/channel/UC2fpVDIjQZtb38sIzYBEmYA"><i class="fab fa-youtube"></i></a>
             <a class="social-icon" href="https://patreon.com/KagamineP"><i class="fab fa-patreon"></i></a>
+            <a class="social-icon" href="https://www.facebook.com/KagamineP"><i class="fab fa-facebook"></i></a>
           </div>
         </section>
         <hr class="m-0" />
