--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
               </div>
               <div class="flex-shrink-0"><span class="text-primary">March 2016 - Present</span>
             </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-1">
+                    <h3 class="mb-0">Website developer</h3>
+                    <div class="subheading mb-3">A company whose name I can't tell you.</div>
+                    <p>I was responsible for the site design and code.</p>
+                </div>
+                <div class="flex-shrink-0"><span class="text-primary">August 21 - September 28, 2020</span></div>
+            </div>
         </section>
         <hr class="m-0" />
 
