--- a/index.html
+++ b/index.html
@@ -78,13 +78,25 @@
               </div>
               <div class="flex-shrink-0"><span class="text-primary">March 2016 - Present</span>
             </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+            <div class="resume-section-content">
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-2">
                     <h3 class="mb-0">Website developer</h3>
                     <div class="subheading mb-3">A company whose name I can't tell you.</div>
                     <p>I was responsible for the site design and code.</p>
                 </div>
                 <div class="flex-shrink-0"><span class="text-primary">August 21 - September 28, 2020</span></div>
+              </div>
+            </div>
+            <div class="resume-section-content">
+              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="flex-grow-2">
+                  <h3 class="mb-0">Website developer</h3>
+                  <div class="subheading mb-3">kozhevnikovamn.ru</div>
+                  <p>Website configuration and administration.</p>
+                </div>
+                <div class="flex-shrink-0><span class="text-primary">October 30rd - Present time</span></div>
+              </div>
             </div>
         </section>
         <hr class="m-0" />
