--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
               <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="flex-grow-1">
                   <h3 class="mb-0">Website developer</h3>
-                  <div class="subheading mb-3">kozhevnikovamn.ru</div>
+                  <div class="subheading mb-3"><a href="https://kozhevnikovamn.ru">kozhevnikovamn.ru</a></div>
                   <p>Website configuration and administration.</p>
                 </div>
-                <div class="flex-shrink-0><span class="text-primary">October 30rd - Present time</span></div>
+                <div class="flex-shrink-0"><span class="text-primary">October 30rd - Present time</span></div>
               </div>
             </div>
         </section>
