--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                <div class="flex-grow-1">
                    <h3 class="mb-0">Website developer</h3>
-                   <div class="subheading mb-3">A company whose name I can't tell you.</div>
+                   <div class="subheading mb-3">Individual entrepreneur</div>
                    <p>I was responsible for the site design and code.</p>
                </div>
                <div class="flex-shrink-0"><span class="text-primary">August 21 - September 28, 2020</span></div>
