--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         <span class="d-block d-lg-none">Dmitry Kiryanov</span>
-        <span class="d-home d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profileMakoto.JPG" alt="" /></span>
+        <span class="d-home d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/myProfilePhoto.jpg" alt="" /></span>
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -74,7 +74,7 @@
               <div class="flex-grow-1">
                 <h3 class="mb-0">Akiba Daichi voice provider</h3>
                 <div class="subheading mb-3">Team KagamineP</div>
-                <p>I am the author and voice provider for this virtual vocalist. I update its voice packages from time to time, and add new languages.</p>
+                <p>I am the author and voice provider for this virtual vocalist. I update his voice packages from time to time, and add new languages.</p>
               </div>
               <div class="flex-shrink-0"><span class="text-primary">March 2016 - Present</span>
             </div>
