--- a/index.html
+++ b/index.html
@@ -87,15 +87,36 @@
                <div class="flex-shrink-0"><span class="text-primary">August 21 - September 28, 2020</span></div>
               </div>
             </div>
-              <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="flex-grow-1">
-                  <h3 class="mb-0">Website developer</h3>
-                  <div class="subheading mb-3"><a href="https://kozhevnikovamn.ru">kozhevnikovamn.ru</a></div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Website developer</h3>
+                <div class="subheading mb-3"><a href="https://kozhevnikovamn.ru">kozhevnikovamn.ru</a></div>
                   <p>Website configuration and administration.</p>
                 </div>
-                <div class="flex-shrink-0"><span class="text-primary">October 30rd - Present time</span></div>
+              <div class="flex-shrink-0"><span class="text-primary">October 30rd, 2020 - Present time</span></div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Intern</h3>
+                <div class="subheading mb-3">MBOU School No.75</div>
+                <div class="flex-shrink-0"><span class="text-primary">October 2nd - November 11, 2020</span></div>
               </div>
             </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Census taker</h3>
+                <div class="subheading mb-3">All - Russian Population Census</div>
+                <div class="flex-shrink-0"><span class="text-primary">September - November, 2021</span></div>
+              </div>
+            </div>
+            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+              <div class="flex-grow-1">
+                <h3 class="mb-0">Intern</h3>
+                <div class="subheading mb-3">MBOU School No.75</div>
+                <div class="flex-shrink-0"><span class="text-primary">January 11th - June 10th, 2022</span></div>
+              </div>
+            </div>
+          </div>
         </section>
         <hr class="m-0" />
 
