--- a/rules.html
+++ b/rules.html
@@ -3,14 +3,19 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Правила личных сообщений в группе Уфане Юкитеру</title>
+    <title>Правила личных сообщений | KagamineP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <!-- <link href="https://fonts.googleapis.com/css?family=Roboto:100" rel="stylesheet"> -->
     <!-- <script src="main.js"></script> -->
+    <style>
+        .centered {
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-    <h1 class="centered">Правила личных сообщений в группе Уфане Юкитеру</h1>
+    <h1 class="centered">Правила личных сообщений</h1>
     <p>Доброго времени суток! Вы попали сюда по ссылке, которая была указана в личных сообщениях. Вот правила:</p>
     <br>
     <p class="green">Можно:</p>
@@ -31,12 +36,14 @@
     <p class="centered">Specional колонка для RusUTAU</p> <!-- Ибо нефиг -->
     <div id="MessageToRusUTAU">
     <p>*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch)!</p>
-    <p>Забыл сказать, я никоим образом не знаком с Imocreator.</p>
-    <p>С каждым страйком в мою сторону от Немезиды, я буду кидать жалобы на группу!</p>
+    <p>Я никоим образом не знаком с Imocreator и никоим случаем не являюсь ее подсоской.</p>
+    <p>Кактуса у меня в жопе нет и не являюсь ни псом, ни пидорасом!</p>
+    <p>ЕБАТЬ ЭТО ЧЕ, МАРГАРИТА БАУМ?!))))))</p>
+    <iframe src="//vk.com/video_ext.php?oid=-23742946&id=456242969&hash=ad28de8fcf148d37&hd=1" width="640" height="360" frameborder="0" allowfullscreen></iframe>
     </div>
     <br>
-    <p class="rules"><i>Правила опубликованы: 26.06.2018, Вступили в силу: 26.06.2018</i></p>
+    <p class="rules"><i>Правила опубликованы: 26.06.2018, Вступили в силу: 26.06.2018; Обновлено: 13.04.2025</i></p>
     <p class="HostedOnGitHub">Хостинг предоставлен GitHub Pages</p>
-    <p class="copyright">Copyright (C) KagamineP 2017 - 2018 Все права защищены!</p>
+    <p class="copyright">Copyright (C) KagamineP 2017 - 2025 Все права защищены!</p>
 </body>
 </html>
