--- a/rules.html
+++ b/rules.html
@@ -33,8 +33,8 @@
         <li><p>Спрашивать, есть ли у UTAU дизайн.</p></li>
     </ul>
     <br>
-    <p class="centered">Specional колонка для RusUTAU</p> <!-- Ибо нефиг -->
-    <div id="MessageToRusUTAU">
+    <div class="centered">
+        <h1>СПЭШЛ колонка для RusUTAU</h1> <!-- Ахахахах, я та еще злопамятная сука -->
     <p>*- Я помню тебя, Dd Nocebo (aka Маргарита Баум, aka Nia Skretch)!</p>
     <p>Я никоим образом не знаком с Imocreator и никоим случаем не являюсь ее подсоской.</p>
     <p>Кактуса у меня в жопе нет и не являюсь ни псом, ни пидорасом!</p>
